--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <img id="bg" class="bg header-image" src="images/headerimage.jpg" alt="">
                     <div class="container">
                         <div class="carousel-caption">
-                            <img src="images/veed-logo.png">
+                            <img class="veed-logo" src="images/veed-logo.png">
                             <h3>Veed.me is the ONLY video production marketplace
                             <br/>made by filmmakers, for fimmakers.</h3>
                             <p>Sign up, Get jobs, GET PAID</p>
