--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
         <div id="veed-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="item active bg">
-                    <img id="bg" class="bg header-image" src="images/headerimage.jpg" alt="">
+                    <img id="bg" class="bg header-image" src="images/bgimage-smaller.jpg" alt="">
                     <div class="container">
                         <div class="carousel-caption">
-                            <img class="veed-logo" src="images/veed-logo.png">
+                            <a href="http://www.veed.me">
+                                <img class="veed-logo" src="images/veed-logo.png">
+                            </a>
                             <h3>Veed.me is the ONLY video production marketplace
                             <br/>made by filmmakers, for fimmakers.</h3>
                             <p>Sign up, Get jobs, GET PAID</p>
@@ -127,12 +129,18 @@
                 <div class="col-md-12">
                     <h2 class="text-center">Start making money, doing the thing you love</h2>
                 </div>
-                <div class="col-md-4 col-md-offset-4 veed-footer">
-                    <button class="veed-login-btn col-md-4 btn-info btn-lg btn btn-default">Login</button>
-                    <button class="veed-signup-btn col-md-7 col-md-offset-1 btn-info btn-lg btn btn-default">Sign Me Up</button>
-                </div>
             </div>
-            
+           <div class="row">
+               <div class="col-md-8 col-md-offset-2 veed-footer">
+                   <div class="col-md-4">
+                       <button class="veed-login-btn btn-block btn-info btn-lg btn">Login</button>
+                   </div>
+                   <div class="col-md-8">
+                       <button class="veed-signup-btn btn-block btn-info btn-lg btn">Sign Me Up</button>
+                   </div>
+               </div>
+           </div>
+
             <!-- FOOTER -->
             <footer>
                 <p class="pull-right"><a href="#">Back to top</a></p>
