--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="carousel-inner">
                 <div id="bg" class="item active">
                     <div class="container">
-                       <div class="row">
+                       <div class="row veed-carousel-row">
                            <div class="col-md-12 veed-carousel-content">
                                <div class="col-md-4 col-md-offset-4">
                                     <a href="http://www.veed.me">
