set top logo responsive

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                     <div class="container">
                        <div class="row veed-carousel-row">
                            <div class="col-md-12 veed-carousel-content">
-                               <div class="col-md-4 col-md-offset-4">
+                               <div class="col-md-4 col-md-offset-4 center-block">
                                     <a href="http://www.veed.me">
-                                        <img class="veed-logo" src="images/veed-logo.png">
+                                        <img class="veed-logo img-responsive" src="images/veed-logo.png">
                                     </a>
                                 </div>
                                <div class="col-md-12 text-center">
