add margin above login for mobile

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                                <input type="password" class="form-control" id="password2" placeholder="password confirm">
                                            </div>
                                            <button id="veed-signup" type="submit" class="btn btn-info">Sign Up</button>
-                                           <p><a class="veed-login-toggle" href="#" data-login="login">Or Log-in</a></p>
+                                           <p style="margin-top: 10px;"><a class="veed-login-toggle" href="#" data-login="login">Or Log-in</a></p>
                                        </form>
                                    </div>
                                    <div class="row veed-howitworks-wrap">
