--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="container">
                        <div class="row veed-carousel-row">
                            <div class="col-md-12 veed-carousel-content">
-                               <div class="col-md-4 col-md-offset-4 center-block">
+                               <div class="col-md-4 col-md-offset-4">
                                     <a href="http://www.veed.me">
                                         <img class="veed-logo img-responsive" src="images/veed-logo.png">
                                     </a>
