--- a/index.html
+++ b/index.html
@@ -28,45 +28,51 @@
                 <div id="bg" class="item active">
                     <div class="container">
                        <div class="row veed-carousel-row">
-                           <div class="col-md-12 veed-carousel-content">
-                               <div class="col-md-4 col-md-offset-4">
-                                    <a href="http://www.veed.me">
-                                        <img class="veed-logo img-responsive" src="images/veed-logo.png">
-                                    </a>
+                           <div class="col-md-12 col-sm-12 veed-carousel-content">
+                               <div class="row">
+                                    <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
+                                        <a href="http://www.veed.me">
+                                            <img class="veed-logo img-responsive" src="images/veed-logo.png">
+                                        </a>
+                                    </div>
+                               </div>
+                                <div class="row">
+                                    <div class="col-md-12 text-center">
+                                        <h3>
+                                           Veed.me is the ONLY video production marketplace
+                                            <br/>
+                                            made by filmmakers, for fimmakers.
+                                        </h3>
+                                        <p>Sign up, Get jobs, GET PAID</p>
+                                    </div>
                                 </div>
-                               <div class="col-md-12 text-center">
-                                    <h3>
-                                       Veed.me is the ONLY video production marketplace
-                                        <br/>
-                                        made by filmmakers, for fimmakers.
-                                    </h3>
-                                    <p>Sign up, Get jobs, GET PAID</p>
-                                </div>
-                               <div class="col-md-4 col-md-offset-4">
-                                   <div class="row">
-                                       <form role="form" class="col-md-12 signup_page_form">
-                                           <div class="form-group">
-                                               <input type="text" class="form-control" id="name" placeholder="full name">
+                                <div class="row">
+                                    <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
+                                       <div class="row">
+                                           <form role="form" class="col-md-12 signup_page_form">
+                                               <div class="form-group">
+                                                   <input type="text" class="form-control" id="name" placeholder="full name">
+                                               </div>
+                                               <div class="form-group">
+                                                   <input type="email" class="form-control" id="email" placeholder="email">
+                                               </div>
+                                               <div class="form-group">
+                                                   <input type="password" class="form-control" id="password1" placeholder="password">
+                                               </div>
+                                               <div class="form-group">
+                                                   <input type="password" class="form-control" id="password2" placeholder="password confirm">
+                                               </div>
+                                               <button id="veed-signup" type="submit" class="btn btn-info">Sign Up</button>
+                                               <p style="margin-top: 10px;"><a class="veed-login-toggle" href="#" data-login="login">Or Log-in</a></p>
+                                           </form>
+                                       </div>
+                                       <div class="row veed-howitworks-wrap">
+                                           <div class="veed-findoutmore">
+                                               <button id="veed-howitworks" class="btn btn-lg btn-warning btn-block">Learn how it works</button>
                                            </div>
-                                           <div class="form-group">
-                                               <input type="email" class="form-control" id="email" placeholder="email">
-                                           </div>
-                                           <div class="form-group">
-                                               <input type="password" class="form-control" id="password1" placeholder="password">
-                                           </div>
-                                           <div class="form-group">
-                                               <input type="password" class="form-control" id="password2" placeholder="password confirm">
-                                           </div>
-                                           <button id="veed-signup" type="submit" class="btn btn-info">Sign Up</button>
-                                           <p style="margin-top: 10px;"><a class="veed-login-toggle" href="#" data-login="login">Or Log-in</a></p>
-                                       </form>
-                                   </div>
-                                   <div class="row veed-howitworks-wrap">
-                                       <div class="veed-findoutmore">
-                                           <button id="veed-howitworks" class="btn btn-lg btn-warning btn-block">Learn how it works</button>
                                        </div>
                                    </div>
-                               </div>
+                                </div>
                            </div>
                        </div>
                     </div>
