add quote to grid

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                        <div class="row veed-carousel-row">
                            <div class="col-md-12 col-sm-12 veed-carousel-content">
                                <div class="row">
-                                    <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
+                                    <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
                                         <a href="http://www.veed.me">
                                             <img class="veed-logo img-responsive" src="images/veed-logo.png">
                                         </a>
@@ -47,7 +47,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
+                                    <div class="col-lg-4 col-lg-push-2 col-md-4 col-md-push-2 col-sm-6 col-sm-push-1 col-xs-8 col-xs-offset-2">
                                        <div class="row">
                                            <form role="form" class="col-md-12 signup_page_form">
                                                <div class="form-group">
@@ -71,17 +71,17 @@
                                                <button id="veed-howitworks" class="btn btn-lg btn-warning btn-block">Learn how it works</button>
                                            </div>
                                        </div>
-                                   </div>
+                                    </div>
+                                    <div class="col-lg-6 col-lg-pull-8 col-md-4 col-md-pull-6 col-sm-4 col-sm-pull-9 col-xs-12">
+                                        <div class="veed-quote">
+                                            <blockquote>
+                                               <h3>Lorium Ipsum changed my life!</h3>
+                                               <footer>Creators Name, City</footer>
+                                           </blockquote>
+                                        </div>
+                                    </div>
                                 </div>
                            </div>
-                       </div>
-                    </div>
-                    <div class="row pull-left corner-caption">
-                       <div class="col-md-12">
-                           <blockquote>
-                               <h3>Lorium Ipsum changed my life!</h3>
-                               <footer>Creators Name, City</footer>
-                           </blockquote>
                        </div>
                     </div>
                 </div>
