--- a/index.html
+++ b/index.html
@@ -1,178 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>VEED.ME</title>
-        <link href='http://fonts.googleapis.com/css?family=Quattrocento+Sans:400,700' rel='stylesheet' type='text/css'>
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Optional theme -->
-<!--        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">-->
-        <link rel="stylesheet" href="css/veed.css">
+    <title>VEED.ME</title>
+    <link href='http://fonts.googleapis.com/css?family=Quattrocento+Sans:400,700' rel='stylesheet' type='text/css'>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
+    <!-- Optional theme -->
+    <!--        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">-->
+    <link rel="stylesheet" href="css/veed.css">
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
-    </head>
-    <body>
-        <!-- Carousel
+</head>
+
+<body>
+    <!-- Carousel
 ================================================== -->
-        <div id="veed-carousel" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div id="bg" class="item active">
-                    <div class="container">
-                       <div class="row veed-carousel-row">
-                           <div class="col-md-12 col-sm-12 veed-carousel-content">
-                               <div class="row">
-                                    <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
-                                        <a href="http://www.veed.me">
-                                            <img class="veed-logo img-responsive" src="images/veed-logo.png">
-                                        </a>
-                                    </div>
-                               </div>
-                                <div class="row">
-                                    <div class="col-md-12 text-center">
-                                        <h3>
-                                           Veed.me is the ONLY video production marketplace
-                                            <br/>
-                                            made by filmmakers, for fimmakers.
-                                        </h3>
-                                        <p>Sign up, Get jobs, GET PAID</p>
+    <div id="veed-carousel" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div id="bg" class="item active">
+                <div class="container">
+                    <div class="row veed-carousel-row">
+                        <div class="col-md-12 col-sm-12 veed-carousel-content">
+                            <div class="row">
+                                <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
+                                    <a href="http://www.veed.me">
+                                        <img class="veed-logo img-responsive" src="images/veed-logo.png">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12 text-center">
+                                    <h3>
+                                        Veed.me is the ONLY video production marketplace
+                                        <br/>made by filmmakers, for fimmakers.
+                                    </h3>
+                                    <p>Sign up, Get jobs, GET PAID</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-4 col-lg-push-2 col-md-4 col-md-push-2 col-sm-6 col-sm-push-1 col-xs-8 col-xs-offset-2">
+                                    <div class="row">
+                                        <form role="form" class="col-md-12 signup_page_form">
+                                            <div class="form-group">
+                                                <input type="text" class="form-control" id="name" placeholder="full name">
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="email" class="form-control" id="email" placeholder="email">
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="password" class="form-control" id="password1" placeholder="password">
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="password" class="form-control" id="password2" placeholder="password confirm">
+                                            </div>
+                                            <button id="veed-signup" type="submit" class="btn btn-info">Sign Up</button>
+                                            <p style="margin-top: 10px;"><a class="veed-login-toggle" href="#" data-login="login">Or Log-in</a>
+                                            </p>
+                                        </form>
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-lg-4 col-lg-push-2 col-md-4 col-md-push-2 col-sm-6 col-sm-push-1 col-xs-8 col-xs-offset-2">
-                                       <div class="row">
-                                           <form role="form" class="col-md-12 signup_page_form">
-                                               <div class="form-group">
-                                                   <input type="text" class="form-control" id="name" placeholder="full name">
-                                               </div>
-                                               <div class="form-group">
-                                                   <input type="email" class="form-control" id="email" placeholder="email">
-                                               </div>
-                                               <div class="form-group">
-                                                   <input type="password" class="form-control" id="password1" placeholder="password">
-                                               </div>
-                                               <div class="form-group">
-                                                   <input type="password" class="form-control" id="password2" placeholder="password confirm">
-                                               </div>
-                                               <button id="veed-signup" type="submit" class="btn btn-info">Sign Up</button>
-                                               <p style="margin-top: 10px;"><a class="veed-login-toggle" href="#" data-login="login">Or Log-in</a></p>
-                                           </form>
-                                       </div>
-                                       <div class="row veed-howitworks-wrap">
-                                           <div class="veed-findoutmore">
-                                               <button id="veed-howitworks" class="btn btn-lg btn-warning btn-block">Learn how it works</button>
-                                           </div>
-                                       </div>
-                                    </div>
-                                    <div class="col-lg-6 col-lg-pull-8 col-md-4 col-md-pull-6 col-sm-4 col-sm-pull-9 col-xs-12">
-                                        <div class="veed-quote">
-                                            <blockquote>
-                                               <h3>Lorium Ipsum changed my life!</h3>
-                                               <footer>Creators Name, City</footer>
-                                           </blockquote>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-4 col-lg-push-2 col-md-4 col-md-push-2 col-sm-6 col-sm-push-1 col-xs-8 col-xs-offset-2">
+                                    <div class="row veed-howitworks-wrap">
+                                        <div class="veed-findoutmore">
+                                            <button id="veed-howitworks" class="btn btn-lg btn-warning btn-block">Learn how it works</button>
                                         </div>
                                     </div>
                                 </div>
-                           </div>
-                       </div>
+                                <div class="col-lg-6 col-lg-pull-8 col-md-4 col-md-pull-6 col-sm-4 col-sm-pull-9 col-xs-12">
+                                    <div class="veed-quote">
+                                        <blockquote>
+                                            <h3>Lorium Ipsum changed my life!</h3>
+                                            <footer>Creators Name, City</footer>
+                                        </blockquote>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-<!--
+        </div>
+        <!--
             <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
             <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
 -->
-        </div><!-- /.carousel -->
+    </div>
+    <!-- /.carousel -->
 
-        <div class="container veed-body">
-            <div class="row">
-                <div class="col-md-12">
-                    <h1 class="text-center">How it works</h1>
-                </div>
+    <div class="container veed-body">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="text-center">How it works</h1>
             </div>
-            <div class="row">
-                <div class="col-xs-6 col-sm-3">
-                    <div class="thumbnail">
-                        <div class="caption">
-                            <h3 class="text-center">Browse</h3>
-                            <img src="images/browsecolor.png" alt="" class="img-thumbnail">
+        </div>
+        <div class="row">
+            <div class="col-xs-6 col-sm-3">
+                <div class="thumbnail">
+                    <div class="caption">
+                        <h3 class="text-center">Browse</h3>
+                        <img src="images/browsecolor.png" alt="" class="img-thumbnail">
 
-                            <h4>Browse Veed.me's open projects of different companies around the world</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-3">
-                    <div class="thumbnail">
-                        <div class="caption">
-                            <h3 class="text-center">Pitch</h3>
-                            <img src="images/lightbulb.png" alt="" class="img-thumbnail">
-
-                            <p>Pitch to the client why he should work with you and send him a suggested budget and deliverables.</p>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="clearfix visible-xs-block"></div>
-            
-                <div class="col-xs-6 col-sm-3">
-                    <div class="thumbnail">
-                        <div class="caption">
-                            <h3 class="text-center">Start Pre-production</h3>
-                            <img src="images/edit.png" alt="" class="img-thumbnail">
-
-                            <p>Browse Veed.me's open projects of different companies around the world</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-3">
-                    <div class="thumbnail">
-                        <div class="caption">
-                            <h3 class="text-center">Shoot</h3>
-                            <img src="images/cameracolor.png" alt="" class="img-thumbnail">
-
-                            <p>Shoot the video, get paid 40% for shooting the video and 50% upon delivery.</p>
-                        </div>
+                        <h4>Browse Veed.me's open projects of different companies around the world</h4>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <h2 class="text-center">Start making money, doing the thing you love</h2>
+            <div class="col-xs-6 col-sm-3">
+                <div class="thumbnail">
+                    <div class="caption">
+                        <h3 class="text-center">Pitch</h3>
+                        <img src="images/lightbulb.png" alt="" class="img-thumbnail">
+
+                        <p>Pitch to the client why he should work with you and send him a suggested budget and deliverables.</p>
+                    </div>
                 </div>
             </div>
-           <div class="row">
-               <div class="col-md-8 col-md-offset-2 veed-footer">
-                   <div class="col-md-4">
-                       <button class="veed-login-btn btn-block btn-info btn-lg btn">Login</button>
-                   </div>
-                   <div class="col-md-8">
-                       <button class="veed-signup-btn btn-block btn-info btn-lg btn">Sign Me Up</button>
-                   </div>
-               </div>
-           </div>
 
-            <!-- FOOTER -->
-            <footer>
-                <p class="pull-right"><a href="#">Back to top</a></p>
-                <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-            </footer>
+            <div class="clearfix visible-xs-block"></div>
 
-        </div><!-- /.container -->
+            <div class="col-xs-6 col-sm-3">
+                <div class="thumbnail">
+                    <div class="caption">
+                        <h3 class="text-center">Start Pre-production</h3>
+                        <img src="images/edit.png" alt="" class="img-thumbnail">
+
+                        <p>Browse Veed.me's open projects of different companies around the world</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+                <div class="thumbnail">
+                    <div class="caption">
+                        <h3 class="text-center">Shoot</h3>
+                        <img src="images/cameracolor.png" alt="" class="img-thumbnail">
+
+                        <p>Shoot the video, get paid 40% for shooting the video and 50% upon delivery.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="text-center">Start making money, doing the thing you love</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2 veed-footer">
+                <div class="col-md-4">
+                    <button class="veed-login-btn btn-block btn-info btn-lg btn">Login</button>
+                </div>
+                <div class="col-md-8">
+                    <button class="veed-signup-btn btn-block btn-info btn-lg btn">Sign Me Up</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- FOOTER -->
+        <footer>
+            <p class="pull-right"><a href="#">Back to top</a>
+            </p>
+            <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a>
+            </p>
+        </footer>
+
+    </div>
+    <!-- /.container -->
 
 
-        <!-- Bootstrap core JavaScript
+    <!-- Bootstrap core JavaScript
 ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-        <script src="js/veed.js"></script>
-    </body>
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="js/veed.js"></script>
+</body>
+
 </html>
